--- a/01-components-props-jsx/completed/src/index.css
+++ b/01-components-props-jsx/completed/src/index.css
@@ -29,7 +29,7 @@ body {
   flex-direction: column;
   align-items: center;
   gap: 4.8rem;
-  border: 1px solid #252525;
+  /* border: 1px solid #252525; */
 }
 
 /* *************** */
